Bug 429165 - Bug : Messy rendering with Layer styles
Summary: Bug : Messy rendering with Layer styles
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: layer styles (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: unspecified Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-15 17:50 UTC by stephen
Modified: 2020-12-03 14:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Messy layer style render updates (1.29 MB, image/png)
2020-11-15 17:50 UTC, stephen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stephen 2020-11-15 17:50:40 UTC
Created attachment 133368 [details]
Messy layer style render updates

SUMMARY


STEPS TO REPRODUCE
1. Create a layer
2. Set layer style on the created layer, option : stroke@inside, blend_mode = normal, opacity = 100%.
3. Paint on the layer and see what's happening.

OBSERVED RESULT
Inconsistent and messy pixels on the part that renders the layer style.

EXPECTED RESULT
Clean smooth rendering of the layer style in real-time.

OS Version : Windows 10 1909

You may take the opportnity to try check whether or not other layer styles render in a messy way.
Comment 1 Dmitry Kazakov 2020-11-17 05:16:03 UTC
Yes, I can confirm this bug in krita's stable branch.
Comment 2 Dmitry Kazakov 2020-12-03 14:41:59 UTC
Git commit 0f7878d9e8bd458c5df79e9f7155c0ea69337676 by Dmitry Kazakov.
Committed on 03/12/2020 at 14:41.
Pushed by dkazakov into branch 'krita/4.3'.

Fix artifacts in Stroke layer style

M  +7    -14   libs/image/layerstyles/kis_ls_stroke_filter.cpp

https://invent.kde.org/graphics/krita/commit/0f7878d9e8bd458c5df79e9f7155c0ea69337676
Comment 3 Dmitry Kazakov 2020-12-03 14:42:21 UTC
Git commit 22228920356de53794fd3dc4d13db25bde50c4e5 by Dmitry Kazakov.
Committed on 03/12/2020 at 14:42.
Pushed by dkazakov into branch 'master'.

Fix artifacts in Stroke layer style

M  +7    -14   libs/image/layerstyles/kis_ls_stroke_filter.cpp

https://invent.kde.org/graphics/krita/commit/22228920356de53794fd3dc4d13db25bde50c4e5