Fix artifacts in Stroke layer style

BUG:429165